# dismalcc

./: LICENSE.txt  README.md
.builds/: test.yml
.github/workflows/: guidance.yml  testbuild.yml
clang/: CMakeLists.txt
clang/cmake/modules/: AddClang.cmake
clang/disable-test/CodeGenCXX/: observe-noexcept.cpp
clang/include/clang-c/: Index.h
clang/include/clang/AST/: ASTContext.h  ASTMutationListener.h  Attr.h  BuiltinTypes.def  DeclBase.h  DeclCXX.h  DeclVisitor.h  GlobalDecl.h  RecursiveASTVisitor.h  StmtVisitor.h  TextNodeDumper.h
clang/include/clang/Basic/: Attr.td  AttrDocs.td  Builtins.def  Builtins.h  CapturedStmt.h  DeclNodes.td  DiagnosticCommonKinds.td  DiagnosticDriverKinds.td  DiagnosticGroups.td  DiagnosticParseKinds.td  DiagnosticSemaKinds.td  LangOptions.def  LangOptions.h  StmtNodes.td  TokenKinds.def  TypeTraits.h
clang/include/clang/Config/: config.h.cmake
clang/include/clang/Driver/: Action.h  CC1Options.td  CLCompatOptions.td  Driver.h  Options.td  ToolChain.h
clang/include/clang/Frontend/: CompilerInstance.h  CompilerInvocation.h  FrontendOptions.h
clang/include/clang/Parse/: Parser.h
clang/include/clang/Sema/: Scope.h  ScopeInfo.h  Sema.h
clang/include/clang/Serialization/: ASTBitCodes.h  ASTWriter.h
clang/lib/: CMakeLists.txt
clang/lib/AST/: ASTContext.cpp  ASTDumper.cpp  CMakeLists.txt  CXXInheritance.cpp  Decl.cpp  DeclBase.cpp  DeclPrinter.cpp  Expr.cpp  ExprClassification.cpp  ExprConstant.cpp  ItaniumMangle.cpp  MicrosoftMangle.cpp  NSAPI.cpp  Stmt.cpp  StmtPrinter.cpp  StmtProfile.cpp  TextNodeDumper.cpp  Type.cpp  TypeLoc.cpp
clang/lib/Basic/: Builtins.cpp  CMakeLists.txt
clang/lib/CodeGen/: CGDecl.cpp  CGDeclCXX.cpp  CGExpr.cpp  CGExprScalar.cpp  CGStmt.cpp  CMakeLists.txt  CodeGenFunction.cpp  CodeGenFunction.h  CodeGenModule.cpp  CodeGenModule.h  ModuleBuilder.cpp
clang/lib/Driver/: Action.cpp  Compilation.cpp  Driver.cpp  ToolChain.cpp
clang/lib/Driver/ToolChains/: Clang.cpp  CommonArgs.cpp  CommonArgs.h  Cuda.cpp  Cuda.h  Darwin.cpp  FreeBSD.cpp  Gnu.cpp  MSVC.cpp  MinGW.cpp  NetBSD.cpp
clang/lib/Frontend/: CMakeLists.txt  CompilerInstance.cpp  CompilerInvocation.cpp  InitPreprocessor.cpp  MultiplexConsumer.cpp  PrintPreprocessedOutput.cpp
clang/lib/FrontendTool/: CMakeLists.txt  ExecuteCompilerInvocation.cpp
clang/lib/Parse/: CMakeLists.txt  ParseDecl.cpp  ParseDeclCXX.cpp  ParseExpr.cpp  ParsePragma.cpp  ParseStmt.cpp  Parser.cpp
clang/lib/Sema/: CMakeLists.txt  Scope.cpp  ScopeInfo.cpp  Sema.cpp  SemaChecking.cpp  SemaDecl.cpp  SemaDeclCXX.cpp  SemaExceptionSpec.cpp  SemaExpr.cpp  SemaExprCXX.cpp  SemaExprMember.cpp  SemaInit.cpp  SemaLookup.cpp  SemaStmt.cpp  SemaTemplateInstantiateDecl.cpp  SemaType.cpp  TreeTransform.h
clang/lib/Serialization/: ASTCommon.cpp  ASTCommon.h  ASTReader.cpp  ASTReaderDecl.cpp  ASTReaderStmt.cpp  ASTWriter.cpp  ASTWriterDecl.cpp  ASTWriterStmt.cpp
clang/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
clang/test/Analysis/: lit.local.cfg
clang/test/CodeGenCXX/: observe-noexcept.cpp
clang/test/Driver/: arch-specific-libdir-rpath.c  autocomplete.c  cl-options.c  phases.c  ppc-features.cpp
clang/tools/: CMakeLists.txt
clang/tools/driver/: cc1_main.cpp
clang/tools/libclang/: CIndex.cpp  CMakeLists.txt  CXCursor.cpp
clang/unittests/: CMakeLists.txt
compiler-rt/: CMakeLists.txt
dismaltc_doc/: CHANGELOG.txt  build.txt
disub/: README.txt
libcxx/utils/docker/scripts/: checkout_git.sh
lld/: CMakeLists.txt
lld/cmake/modules/: AddLLD.cmake
lld/include/lld/Core/: Instrumentation.h
lld/tools/lld/: CMakeLists.txt  lld.cpp
llvm/: .gitignore  CMakeLists.txt  CODE_OWNERS.TXT  LICENSE_DISMALTC.txt  LLVMBuild.txt
llvm/cmake/: config-ix.cmake
llvm/cmake/modules/: AddLLVM.cmake  CheckCompilerVersion.cmake  CrossCompile.cmake  HandleLLVMOptions.cmake  TableGen.cmake
llvm/include/llvm/Config/: config.h.cmake
llvm/include/llvm/Support/: CMakeLists.txt
llvm/lib/Support/: Process.cpp
llvm/projects/: CMakeLists.txt
llvm/runtimes/: CMakeLists.txt
llvm/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
llvm/tools/: CMakeLists.txt  LLVMBuild.txt
llvm/utils/docker/: build_docker_image.sh
llvm/utils/docker/scripts/: checkout.sh
llvm/utils/docker/scripts/llvm_checksum/: project_tree.py
llvm/utils/git-svn/: git-llvm
llvm/utils/lit/lit/llvm/: config.py
llvm/utils/release/: build_llvm_package.bat  export.sh  tag.sh  test-release.sh
t/regress/: Makefile  sample_c.c  sample_gnuc.c
tmp.builds/: test.yml
